2012-03-01  Richard Guenther  <rguenther@suse.de>

PR middle-end/52443
	* tree-cfg.c (verify_gimple_assign_unary): Allow any
	conversions from integral types to pointer types.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@184739 138bc75d-0d04-0410-961f-82ee72b054a4